The default value is 'find-dired-sort-by-filename'.

*** New sorting options for the user option 'find-ls-option'.

---
*** Zstandard compression is now supported for 'dired-do-compress' and
'dired-do-compress-to'.

** Change Logs and VC

+++
*** New command 'log-edit-generate-changelog-from-diff', bound to 'C-c C-w'.
This generates ChangeLog entries from the VC fileset diff.

*** Recording ChangeLog entries doesn't require an actual file.
If a ChangeLog file doesn't exist, and if the new user option
'add-log-dont-create-changelog-file' is non-nil (which is the
default), commands such as 'C-x 4 a' will add log entries to a
suitable named temporary buffer.  (An existing ChangeLog file will
still be used if it exists.)  Set the user option to nil to get the
previous behavior of always creating a buffer that visits a ChangeLog
file.

*** New user option 'vc-find-revision-no-save'.
With non-nil, 'vc-find-revision' doesn't write the created buffer to file.

---
*** 'vc-dir-ignore' now takes a prefix argument to ignore all marked files.

*** New user option 'vc-git-grep-template'.
This new user option allows customizing the default arguments passed to
'git-grep' when 'vc-git-grep' is used.

*** Command 'vc-git-stash' now respects marks in the "*vc-dir*" buffer.
When some files are marked, only those are stashed.
When no files are marked, all modified files are stashed, as before.

*** The new hook 'vc-retrieve-tag-hook' runs after retrieving a tag.

---
*** 'vc-hg' now invokes 'smerge-mode' when visiting files.
Code that attempted to invoke 'smerge-mode' when visiting an Hg file
with conflicts existed in earlier versions of Emacs, but incorrectly
never detected a conflict due to invalid assumptions about cached
values.

+++
*** 'C-u C-x v D' ('vc-root-version-diff') prompts for two revisions
and compares their entire trees.

*** New user option 'vc-hg-revert-switches' specifies switches to pass
to Hg revert.
